--- a/clients/console/build.gradle
+++ b/clients/console/build.gradle
@@ -9,6 +9,8 @@ application {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+
 
     // the Json library
     implementation 'com.google.code.gson:gson:2.8.6'
